# Algorithms_and_structures

./: .pre-commit-config.yaml  README.md  TimeDecorator.py  main.py  pyproject.toml
Algorithms/: Dijkstra.py  Divisors.py  KMP.py  KthOrderStatistic.py  Sort.py  boyer_moore_horspool_searcher.py  floyd_warshall.py  kruskal,py  prim.py
Structures/: Heap.py  Stack.py
